--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -6,13 +6,13 @@
 
 #### 数据帧Frame
 
-<img src="Frame.png">
+<img src="http://8.134.134.68/photobucket/Frame.png">
 
 - WebSocket服务器：
 
 - 消息帧类型：
   
-  <img src="FrameType.png">
+  <img src="http://8.134.134.68/photobucket/FrameType.png">
 
 1.连接
 
@@ -46,19 +46,19 @@
 
 ### 12月01日更新
 
-<img src="FrameV1.0.png">
+<img src="http://8.134.134.68/photobucket/FrameV1.0.png">
 
 - 连接成功会返回`type=11`的数据帧，其中`extend`返回了在线与不在线的好友列表
 
 - 前端用户点进与某某某的聊天框通过WebSocket向服务器发送`type=12`的数据帧，其中`extend`中要包含`{'friendId':'', 'userId':''}`，服务器会将消息标记为已读
 
-<img src="messageRead.png">
+<img src="http://8.134.134.68/photobucket/messageRead.png">
 
 - 搭建了图片服务器，支持上传头像和头像预览，注册后头像为默认头像[profile.png (384×384)](http://8.134.134.68/profile/profile.png)  
 
 ### 12月04日更新
 
-<img src="2022-12-4-v1.0.png">
+<img src="http://8.134.134.68/photobucket/2022-12-4-v1.0.png">
 
 - 权限控制
   新增User的`enabled`字段，如果为0，表示无权限进行聊天等涉及到WebSocket的功能，并且建立连接后会返回`type=13`的数据帧，
