feat: 五子棋游戏室的创建和邀请好友进入房间

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -48,7 +48,7 @@
 
 - 连接成功会返回`type=11`的数据帧，其中`extend`返回了在线与不在线的好友列表
 
-- 前端用户点进与某某某的聊天框通过WebSocket向服务器发送`type=12`的数据帧，其中`extend`中要包含`{'friendId':'', 'userId':''}`，服务器会将消息标记为已读
+- 前端用户点进与某某某的聊天框调用/chat/getPrivateChatHistory获取历史消息，同时会将用户与该好友或群聊的所有消息置为已读消息
 
 <img src="http://8.134.134.68/photobucket/messageRead.png">
 
