--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -63,3 +63,11 @@
   最后断开连接。
 - 新增好友上线通知功能，`用户A`上线后会推送上线通知给其所有在线的好友，即发送`type=14`的数据帧，其中`Frame#extend`中包含`用户A`的用户信息
 - 新增好友下线通知功能，`用户B`下线之后同样推送`type=15`的数据帧给所有在线的好友,`Frame#extend`中包含`用户B`的用户信息
+
+```
+POST请求中同时传文件和结构体示例如下：
+```
+<img src="http://8.134.134.68/photobucket/updateUserInfo.png">
+
+### 12月11日更新
+因为太懒还没更新....
